--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.3",
+    "google-auth-library": "^10.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.2",
     "multer": "^1.4.5-lts.1",
