--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^8.0.1",
     "openai": "^6.15.0",
     "uuid": "^9.0.1"
   },
